# AnimationDemo

./: CMakeLists.txt  README.md
shader/: fragment.fs  vertex.vs
src/: Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  main.cpp
